<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recordSongFromMic" />

        <Button
            android:id="@+id/startRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startRecord"
            android:text="@string/startRecord" />

        <Button
            android:id="@+id/stopRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="stopRecord"
            android:text="@string/stopRecord" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playRecord" />

        <Button
            android:id="@+id/readStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="playRecord"
            android:text="@string/play" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>